# transformer-emulator

./: .gitignore  LICENSE  README.md  layers.py  main.py  model.py  pyproject.toml  requirements.txt  tokenizer.py  trainer.py  visualizer_html.py
docs/: index.html
profiles/: default.json
