[project]
name = "transformer-emulator"
version = "1.0.0"
description = "Interactive visualization of LLM internals — training and inference, step by step"
requires-python = ">=3.7"
license = {text = "MIT"}
dependencies = [
    "numpy",
    "fugashi",
    "unidic-lite",
]

[project.urls]
Homepage = "https://github.com/Tomoiura/transformer-emulator"
Demo = "https://Tomoiura.github.io/transformer-emulator/"
